# flashbet-ai

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  LINERA_MAIN_DOCS.md  ORACLE_INTEGRATION_SOLUTION.md  README.md  benchmark_data.json  exec_summary.md  final_verdict.md  hackathon.md  linera-prediction-markets.md  vercel.json  why-build-on-linera.md
flashbet-market/: Cargo.toml
flashbet-market/src/: contract.rs  lib.rs  service.rs  state.rs
flashbet-market/tests/: single_chain.rs
flashbet-oracle/: Cargo.toml
flashbet-oracle/src/: contract.rs  lib.rs  service.rs  state.rs
flashbet-oracle/tests/: single_chain.rs
flashbet-shared/: Cargo.toml
flashbet-shared/src/: lib.rs
flashbet-token/: Cargo.toml
flashbet-token/src/: contract.rs  lib.rs  service.rs  state.rs
flashbet-user/: Cargo.toml
flashbet-user/src/: contract.rs  lib.rs  service.rs  state.rs
flashbet-user/tests/: single_chain.rs
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  MarketCard.tsx  MarketsList.tsx  Navigation.tsx  OraclePanel.tsx  OracleStatus.tsx  UserBalance.tsx
frontend/src/config/: apollo.ts
frontend/src/contexts/: MarketsContext.tsx  TokenContext.tsx  UserContext.tsx  index.tsx
frontend/src/graphql/: fragments.ts  hooks.ts  index.ts  mutations.ts  queries.ts  types.ts
frontend/src/pages/: HomePage.tsx
frontend/src/types/: index.ts
linera-integration-docs/: Applications.md  Chain-ownership.md  Cross-chain-messaging.md  Design-Patterns.md  GraphQL.md  Wallets.md  chain-manegment.md  linera-service.md
monitoring/: market_monitor_control.sh  market_monitor_daemon.sh  monitor_markets.sh
oracle-worker/: .env.example  README.md  package.json  start-daemon.sh  start-oracle.sh  stop-daemon.sh
oracle-worker/src/: config.ts  index.ts
scripts/: benchmark_linera.sh  build.sh  check_status.sh  create_demo_markets.sh  demo_full_cycle.sh  deploy.sh  display_benchmarks.sh  init_market.sh  init_user_balance.sh  quick_compare.sh  redeploy_separate_chains.sh  run_and_display_benchmarks.sh  setup_test_env.sh  start_service.sh  test.sh  test_bet_token.sh  test_endpoint.sh  test_integration.sh  update_frontend_config.sh
(+6 files in other folders)
