[workspace]
members = [
    "flashbet-user",
    "flashbet-market",
    "flashbet-oracle",
    "flashbet-shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/flashbet-ai"

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
