[package]
name = "flashbet-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
name = "flashbet_shared"
path = "src/lib.rs"
